styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Main container */

.container {
    display: grid;
    grid-template-columns: minmax(min-content, 200px) 4fr;
    grid-template-rows: 1fr 3fr;
}

/* Fonts */

h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    font-weight: 600;
}

h3 {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    font-weight: 600;
}

h4 {
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    font-weight: 600;
}

p {
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    color: #737373;
}

.person {
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
}

/* Side bar */ 

.side-bar {
    display: grid;
    grid-area: 1 / 1 / 3 / 2;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 75px repeat(5, minmax(20px, 30px)) 75px repeat(3, minmax(20px, 30px));
    background-color: #0ea5e9;
    color: #ffffff;
    padding: 20px;
}

.side-bar .logo {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 700;
    margin-top: 5px;
}

.side-bar div {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    font-weight: 600;
}

/* Header */

.header {
    display: grid;
    grid-area: 1 / 2 / 2 / 3;
    grid-template-columns: 4fr 1fr;
    grid-template-rows: 1fr 2fr;
    margin: 20px;
}

input[type=text] {
    background-color: #e2e8f0;
    border-radius: 25px;
    border: none;
    width: 50%;
    height: 20px;
}

.name {
    display: flex;
    justify-content: flex-start;
    gap: 20px;
}

.name img {
    display: flex;
    align-self: flex-start;
}

.greeting {
    display: flex;
}

.greeting img {
    display: flex;
    align-self: flex-start;
}

.buttons {
    display: flex;
    justify-content: flex-start;
    gap: 20px;
}

button {
    background-color: #0ea5e9;
    border: #ffffff;
    border-radius: 25px;
    height: 30px;
    width: 80px;
    font-family: 'Roboto', sans-serif;
    font-weight: 600;
    color: #ffffff;
}

/* Main content */

.main-content {
    display: grid;
    grid-area: 2 / 2 / 3 / 3;
    grid-template-columns: 3fr minmax(min-content, 300px);
    grid-template-rows: 1fr 1fr;
    box-shadow: 0 -3px 5px rgb(0 0 0 / 0.2);
    background-color: #e2e8f0;
}

.title-your-projects {
    grid-area: 1 / 1 / 3 / 2;
    align-self: flex-start;
    margin-left: 20px;
}

.project-container {
    display: grid;
    grid-area: 1 / 1 / 3 / 2;
    grid-template-columns: repeat(auto-fit, 200px);
    gap: 20px;
    margin: 20px;
}

.project {
    background-color: #ffffff;
    border-radius: 5px;
    border-left: solid 5px;
    border-left-color: #eab308;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    padding: 20px;
}

.title-announcements {
    grid-area: 1 / 2 / 2 / 3;
    align-self: flex-start;
    margin-left: 20px;
}

.announcements {
    display: grid;
    grid-area: 1 / 2 / 2 / 3;
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    padding: 20px;
    margin: 20px;
}

.title-trending {
    grid-area: 2 / 2 / 3 / 3;
    align-self: flex-start;
    margin-left: 20px;
}

.trending {
    display: grid;
    grid-area: 2 / 2 / 3 / 3;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(4, 1fr);
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    padding: 20px;
    margin: 20px;
}

